@@ -5,7 +5,8 @@
 1.1.1 (unreleased)
 ==================
 
-- Nothing changed yet.
+- Selected month is kept in session, to ease editing in another month than
+  the current one. (requiring at least `icemac.addressbook 2.2`)
 
 
 1.1.0 (2013-12-31)
